# Me-DrugBAN

./: .gitignore  LICENSE  README.md  best_drugban.pt  environment.yml  pyproject.toml  setup.py  training_history.pkl
results/: README_results.md
scripts/: check_kiba_split_vs_data.py  evaluate.py  plot_results.py  plot_roc.py  test_batching.py  test_davis_kiba_loader.py  test_domain_adapt_loader.py  test_model_forward.py  train.py  visualize_molecule_graph.py
src/me_drugban/: model.py
src/me_drugban.egg-info/: PKG-INFO  SOURCES.txt
src/me_drugban/MLP/: model_head.py
src/me_drugban/ban_module/: __init__.py  ban.py
src/me_drugban/data_loader/: __init__.py  collate.py  dataloader.py  davis_kiba_loader.py  utils.py
src/me_drugban/domain_adapt/: __init__.py  adaptor.py
src/me_drugban/gnn_backbone/: __init__.py  gnn.py
src/me_drugban/protein_encoder/: __init__.py  encoder.py
src/me_drugban/train_loop/: __init__.py  train.py
tests/: test_ban_integration.py  test_gnn_forward.py  test_graph_dataloader.py  test_imports.py  test_model_forward.py
