[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "me-drugban"
version = "0.0.1"
description = "Reimplementation of DrugBAN"
authors = [
  { name="Hussen Yesuf Alli", email="your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"